welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: not found: value getPos
  while (getPos()!=(getMondeLargeur()-1, getMondeHauteur-1)){
         ^