welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var c=0
  var y=0
  while (getPos()!=(getMondeLargeur()-1, getMondeHauteur-1)){
    ecritMessage("" + c)
    c+=1
    if(!estFaceMur){
      avance();
    } else {
      setPos(getX()+1, 0);
    }
  }
}